# git_it

./: .dockerignore  .env.example  .gitignore  .mcp.json.example  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODEX.md  Dockerfile  README.md  docker-compose.yml  main.py  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
.agents/: 01-software-engineering-agent.md  03-ai-development-flow-agent.md  04-quality-agent.md  05-infrastructure-cloud-agent.md  06-security-agent.md
.atl/: skill-registry.md
.claude/: CLAUDE.md  settings.json
.codex/: config.toml
.prompts/: 00-start-codex-session.md  01-grill-me-with-docs.md  02-quality-first.md  03-implement-from-tests.md  04-security-review.md  05-architecture-review.md
ADR/: 000-template.md  001-use-spec-driven-development.md  002-use-tdd-as-default.md  003-use-modular-monolith-first.md  004-separate-facts-from-interpretations.md  005-use-structured-llm-outputs.md  006-use-postgresql-pgvector.md  007-use-local-git-mining-plus-github-mcp.md  008-treat-repository-content-as-untrusted.md  009-analyze-commits-oldest-first.md  010-local-first-mvp-accepted-limitations.md  011-expose-readonly-mcp-server.md  012-introduce-in-process-agentic-tool-calling.md  013-sanitize-markdown-rendering.md  014-stream-gitit-gpt-final-answer-over-sse.md  015-graphql-discussions-and-untrusted-text-summarization.md  016-in-process-embedding-retrieval-and-openai-dependency.md
SPECS/: 000-template.md  001-repository-ingestion.md  002-commit-analysis.md  003-pattern-detection.md  004-narrative-engine.md  005-documentation-engine.md
(+496 files in other folders)
