[project]
name = "git-it"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.136.3",
    "gitpython>=3.1.50",
    "instructor>=1.15.1",
    "litellm>=1.88.1",
    "networkx>=3.6.1",
    "pandas>=3.0.3",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pydriller>=2.9",
    "radon>=6.0.1",
    "redis>=8.0.0",
    "rq>=2.9.1",
    "sqlalchemy>=2.0.50",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.49.0",
]

[project.scripts]
git-it = "git_it.cli:main"

[dependency-groups]
docs = ["mkdocs-material>=9.5", "mkdocs-autorefs>=1.0"]
dev = [
    "coverage>=7.14.1",
    "hypothesis>=6.155.2",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.15.16",
    "slowapi>=0.1.9",
]

[tool.coverage.run]
source = ["git_it"]
omit = ["*/tests/*"]

[tool.coverage.report]
show_missing = true
